# BasicOfProgrammingCourse

./: 1.c  10.c  11.c  12.c  13.c  14.c  15.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c  CMakeLists.txt  main.c
libs/algorithms/: CMakeLists.txt
libs/algorithms/basicAlgorithms/: basicAlgorithms.c  basicAlgorithms.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/errors/: errors.c  errors.h
libs/data_structures/matrix/: matrix.c  matrix.h
libs/data_structures/string/: string_.c  string_.h
libs/data_structures/string/tasks/: 1.c  2.c  3.c
libs/data_structures/vector/: vector.c  vector.h  vectorVoid.c  vectorVoid.h
