add_library(data_structures
        errors/errors.h errors/errors.c
        vector/vector.h vector/vector.c
        vector/vectorVoid.h vector/vectorVoid.c
        matrix/matrix.h matrix/matrix.c
        string/string_.h string/string_.c
        string/tasks/1.c
        string/tasks/2.c
        string/tasks/3.c)
